force-app/main/default/objects/AI_Delegate_Config__c/AI_Delegate_Config__c.object-meta.xml
<CustomObject>
    <description>Configures intelligent re-routing when primary approvers are unavailable. Supports auto-escalation, delegation chains, and out-of-office detection logic.</description>
    <label>AI Delegate Config</label>
    <nameField>
        <label>Config Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AI Delegate Configs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>