force-app/main/default/objects/AI_Delegate_Config__c/fields/Delegate_Approver_Role__c.field-meta.xml
<CustomField>
    <fullName>Delegate_Approver_Role__c</fullName>
    <description>Salesforce Role API Name to delegate approvals to when primary is unavailable.</description>
    <label>Delegate Approver Role</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>