force-app/main/default/objects/AI_Delegate_Config__c/fields/Delegation_End__c.field-meta.xml
<CustomField>
    <fullName>Delegation_End__c</fullName>
    <description>DateTime when delegation ends and primary approver resumes responsibility.</description>
    <label>Delegation End</label>
    <type>DateTime</type>
</CustomField>