force-app/main/default/objects/AI_Delegate_Config__c/fields/Delegation_Start__c.field-meta.xml
<CustomField>
    <fullName>Delegation_Start__c</fullName>
    <description>DateTime when delegation becomes active (e.g. out-of-office start).</description>
    <label>Delegation Start</label>
    <type>DateTime</type>
</CustomField>