force-app/main/default/objects/AI_Delegate_Config__c/fields/Escalation_Timeout_Hours__c.field-meta.xml
<CustomField>
    <fullName>Escalation_Timeout_Hours__c</fullName>
    <description>Number of hours before unanswered approval requests are automatically escalated to the next level.</description>
    <label>Escalation Timeout (Hours)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>