force-app/main/default/objects/AI_Delegate_Config__c/fields/Primary_Approver_Role__c.field-meta.xml
<CustomField>
    <fullName>Primary_Approver_Role__c</fullName>
    <description>Salesforce Role API Name of the primary approver this delegation config applies to.</description>
    <label>Primary Approver Role</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>